@@ -1,4 +1,4 @@
-#Thu Apr 17 17:15:40 EDT 2008
+#Mon Apr 21 13:28:54 EDT 2008
 cleanup.add_default_serial_version_id=false
 cleanup.add_generated_serial_version_id=true
 cleanup.add_missing_annotations=false
@@ -52,7 +52,7 @@ editor_save_participant_org.eclipse.jdt.ui.postsavelistener.cleanup=true
 sp_cleanup.add_missing_annotations=true
 sp_cleanup.add_missing_deprecated_annotations=true
 sp_cleanup.add_missing_override_annotations=true
-sp_cleanup.convert_to_enhanced_for_loop=true
+sp_cleanup.on_save_use_additional_actions=true
 sp_cleanup.organize_imports=true
 sp_cleanup.remove_private_constructors=true
 sp_cleanup.remove_trailing_whitespaces=true
